--- a/index.html
+++ b/index.html
@@ -1,7 +1,69 @@
-<div>
-    <p>
-        this is the full form of an application
-    </p>
-    
+<!DOCTYPE html>
+<html lang="en">
 
-</div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PortFolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="class.css">
+    <link rel="stylesheet" href="id.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lilita+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tiro+Devanagari+Hindi:ital@0;1&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+
+    <header>
+        <nav>
+            <div class="left">Kunal's PortFolio</div>
+            <div class="right">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">About</a></li>
+                    <li><a href="/">Services</a></li>
+                    <li><a href="/">Projects</a></li>
+                    <li><a href="/">Contact Me</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+
+        <section class="firstSection">
+            <div class="leftSection">
+                Hi, My name is <span class="purple">Kunal </span>
+                <div>
+                    and i am a passionate
+                    <span id="element"></span>
+
+                </div>
+            </div>
+            <div class="rightSection">
+                <img src="logomy.png" alt="none">
+            </div>
+
+        </section>
+        <hr>
+        <section class="secondSection">
+            <span class="text_grey">What i have done so far</span>
+            <h1>Work Experiences :</h1>
+        </section>
+    </main>
+
+
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script>
+        var typed = new Typed('#element', {
+            strings: ['Android Developer', 'Software Developer', 'UI/UX Designer'],
+            typeSpeed: 50,
+        });
+    </script>
+</body>
+
+</html>
