--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
                 Hi, My name is <span class="purple">Kunal </span>
                 <div>
                     and i am a passionate
-                    <span id="element"></span>
-
+                </div>
+                <span id="element"></span>
+                <div class="button">
+                    <button class="btn"><a href="/" download>Download Resume</a></button>
+                    <button class="btn"><a href="https://github.com/Kunalsahu07?tab=repositories" target="_blank">Visit Github</a></button>
                 </div>
             </div>
             <div class="rightSection">
