--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <span id="element"></span>
                 <div class="button">
-                    <button class="btn"><a href="/" download>Download Resume</a></button>
+                    <button class="btn"><a href="Resume.pdf" download>Download Resume</a></button>
                     <button class="btn"><a href="https://github.com/Kunalsahu07?tab=repositories" target="_blank">Visit Github</a></button>
                 </div>
             </div>
