adding project name and logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 
     <header>
         <nav>
-            <div class="left">Kunal's PortFolio</div>
+            <a href="http://127.0.0.1:5500/PortFolio/">
+                <div class="left"><span class="kunaltext" style="color: whitesmoke;">KUNAL'S</span>
+                     <span class="port" style="color: cyan;">PORTFOLIO</span></div>
+            </a>
             <div class="right">
                 <ul>
                     <li><a href="/">Home</a></li>
@@ -44,18 +47,57 @@
                 <span id="element"></span>
                 <div class="button">
                     <button class="btn"><a href="Resume.pdf" download>Download Resume</a></button>
-                    <button class="btn"><a href="https://github.com/Kunalsahu07?tab=repositories" target="_blank">Visit Github</a></button>
+                    <button class="btn"><a href="https://github.com/Kunalsahu07?tab=repositories" target="_blank">Visit
+                            Github</a></button>
                 </div>
             </div>
             <div class="rightSection">
-                <img src="logomy.png" alt="none">
+                <img src="logomy.png" alt="none" class="myimage">
             </div>
 
         </section>
+
         <hr>
+
         <section class="secondSection">
             <span class="text_grey">What i have done so far</span>
             <h1>Work Experiences :</h1>
+
+            <div class="container">
+
+                <div class="one">
+                    <h3>Weather App</h3>
+                    <img src="weather-app.png" alt="weather_logo">
+                    
+                </div>
+
+
+                <div class="two">
+                     <h3>News App</h3>
+                     <img src="newspaper.png" alt="news_logo">
+                </div>
+
+
+                <div class="three">
+                    <h3>Tic Tac Toe App</h3>
+                    <img src="tic-tac-toe.png" alt="tic-tac-toe_logo">
+                </div>
+
+                <div class="four">
+                    <h3>Todo App</h3>
+                    <img src="productivity.png" alt="Todo_logo">
+                </div>
+
+                <div class="five">
+                       <h3>Calculator App</h3>
+                       <img src="calculator.png" alt="">
+                </div>
+
+                <div class="six">
+                    <h3>Music App</h3>
+                    <img src="music.png" alt="">
+                </div>
+            </div>
         </section>
     </main>
 
