refine logo in folder

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="rightSection">
-                <img src="logomy.png" alt="none" class="myimage">
+                <img src="images/logomy.png" alt="none" class="myimage">
             </div>
 
         </section>
@@ -67,35 +67,35 @@
 
                 <div class="one">
                     <h3>Weather App</h3>
-                    <img src="weather-app.png" alt="weather_logo">
-                    
+                    <img src="images/weather-app.png" alt="weather_logo">
+
                 </div>
 
 
                 <div class="two">
                      <h3>News App</h3>
-                     <img src="newspaper.png" alt="news_logo">
+                     <img src="images/newspaper.png" alt="news_logo">
                 </div>
 
 
                 <div class="three">
                     <h3>Tic Tac Toe App</h3>
-                    <img src="tic-tac-toe.png" alt="tic-tac-toe_logo">
+                    <img src="images/tic-tac-toe.png" alt="tic-tac-toe_logo">
                 </div>
 
                 <div class="four">
                     <h3>Todo App</h3>
-                    <img src="productivity.png" alt="Todo_logo">
+                    <img src="images/productivity.png" alt="Todo_logo">
                 </div>
 
                 <div class="five">
                        <h3>Calculator App</h3>
-                       <img src="calculator.png" alt="">
+                       <img src="images/calculator.png" alt="">
                 </div>
 
                 <div class="six">
                     <h3>Music App</h3>
-                    <img src="music.png" alt="">
+                    <img src="images/music.png" alt="">
                 </div>
             </div>
         </section>
