adding about section

--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortFolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="class.css">
-    <link rel="stylesheet" href="id.css">
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="section1.css">
-    <link rel="stylesheet" href="section2.css">
-    <link rel="stylesheet" href="footer.css">
-
+    <link rel="stylesheet" href="home/footer.css">
+    <link rel="stylesheet" href="home/global.css">
+    <link rel="stylesheet" href="home/id.css">
+    <link rel="stylesheet" href="home/nav.css">
+    <link rel="stylesheet" href="home/section1.css">
+    <link rel="stylesheet" href="home/section2.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -32,8 +30,8 @@
             </a>
             <div class="right">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/">About</a></li>
+                    <li><a href="http://127.0.0.1:5500">Home</a></li>
+                    <li><a href="http://127.0.0.1:5500/about.html">About</a></li>
                     <li><a href="/">Services</a></li>
                     <li><a href="/">Projects</a></li>
                     <li><a href="/">Contact Me</a></li>
@@ -52,7 +50,7 @@
                 </div>
                 <span id="element"></span>
                 <div class="button">
-                    <button class="btn"><a href="Resume.pdf" download>Download Resume</a></button>
+                    <button class="btn"><a href="pdfs/Resume.pdf" download>Download Resume</a></button>
                     <button class="btn"><a href="https://github.com/Kunalsahu07?tab=repositories" target="_blank">Visit
                             Github</a></button>
                 </div>
