--- a/about.html
+++ b/about.html
@@ -15,18 +15,18 @@
     <!------------------ Header --------------------->
     <header>
         <nav>
-            <a href="http://127.0.0.1:5500/PortFolio/">
+            <a href="http://127.0.0.1:5500/index.html">
                 <div class="left"><span class="kunaltext" style="color: whitesmoke;">KUNAL'S</span>
                     <span class="port" style="color: cyan;">PORTFOLIO</span>
                 </div>
             </a>
             <div class="right">
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/">About</a></li>
+                    <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
+                    <li><a href="http://127.0.0.1:5500/about.html">About</a></li>
                     <li><a href="/">Services</a></li>
-                    <li><a href="/">Projects</a></li>
-                    <li><a href="/">Contact Me</a></li>
+                    <li><a href="http://127.0.0.1:5500/projects.html">Projects</a></li>
+                    <li><a href="http://127.0.0.1:5500/contact.html">Contact Me</a></li>
                 </ul>
             </div>
         </nav>
