login btn added

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,9 @@
     <link rel="stylesheet" href="home/global.css">
 
 </head>
+
 <body>
-     <!------------------ Header --------------------->
+    <!------------------ Header --------------------->
     <header>
         <nav>
             <a href="http://127.0.0.1:5500">
@@ -22,7 +24,6 @@
                 <ul>
                     <li><a href="http://127.0.0.1:5500">Home</a></li>
                     <li><a href="http://127.0.0.1:5500/about.html">About</a></li>
-                    <li><a href="/">Services</a></li>
                     <li><a href="http://127.0.0.1:5500/projects.html">Projects</a></li>
                     <li><a href="http://127.0.0.1:5500/contact.html">Contact Me</a></li>
                 </ul>
@@ -31,6 +32,22 @@
     </header>
     <!---------------------- End Header ----------------- -->
 
-    
+    <main>
+        <!------------------ First Section --------------------->
+        <section class="firstSection">
+           <div>
+            <h2>Contact Me</h2>
+           </div>
+            <div class="container"></div>
+                <form>
+                    <input type="text" placeholder="Your Name" required>
+                    <input type="email" placeholder="Your Gmail" required>
+                    <textarea placeholder="Write your query..." rows="5" required></textarea>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </section>
+        <!---------------------- End First Section ----------------- -->
 </body>
-</html>     
+
+</html>
