--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
                 <ul>
                     <li><a href="http://127.0.0.1:5500">Home</a></li>
                     <li><a href="http://127.0.0.1:5500/about.html">About</a></li>
-                    <li><a href="/">Services</a></li>
                     <li><a href="http://127.0.0.1:5500/projects.html">Projects</a></li>
                     <li><a href="http://127.0.0.1:5500/contact.html">Contact Me</a></li>
+                    
                 </ul>
+                <a href="http://127.0.0.1:5500/login.html" class="login-btn">Login</a>
+
             </div>
         </nav>
     </header>
@@ -53,59 +55,18 @@
                     <button class="btn"><a href="pdfs/Resume.pdf" download>Download Resume</a></button>
                     <button class="btn"><a href="https://github.com/Kunalsahu07?tab=repositories" target="_blank">Visit
                             Github</a></button>
-              
+
 
                 </div>
             </div>
             <div class="rightSection">
-                <img src="images/logomy.png" alt="none" class="myimage">
+                <img src="images/kunalnext.png" alt="none" class="myimage">
             </div>
         </section>
         <!---------------------- End First Section ----------------- -->
 
         <hr>
 
-        <!------------------ Second Section --------------------->
-        <section class="secondSection">
-            <span class="text_grey">What i have done so far</span>
-            <h1>Work Experiences :</h1>
-
-            <div class="container">
-
-                <div class="one">
-                    <h3>Weather App</h3>
-                    <img src="images/weather-app.png" alt="weather_logo">
-
-                </div>
-
-
-                <div class="two">
-                    <h3>News App</h3>
-                    <img src="images/newspaper.png" alt="news_logo">
-                </div>
-
-
-                <div class="three">
-                    <h3>Tic Tac Toe App</h3>
-                    <img src="images/tic-tac-toe.png" alt="tic-tac-toe_logo">
-                </div>
-
-                <div class="four">
-                    <h3>Todo App</h3>
-                    <img src="images/productivity.png" alt="Todo_logo">
-                </div>
-
-                <div class="five">
-                    <h3>Calculator App</h3>
-                    <img src="images/calculator.png" alt="">
-                </div>
-
-                <div class="six">
-                    <h3>Music App</h3>
-                    <img src="images/music.png" alt="">
-                </div>
-            </div>
-        </section>
     </main>
     <!---------------------- End Second Section ----------------- -->
 
