--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="about/aboutnav.css">
     <link rel="stylesheet" href="about/section1.css">
     <link rel="stylesheet" href="about/section2.css">
+    <link rel="stylesheet" href="home/global.css">
 </head>
 
 <body>
@@ -27,6 +28,7 @@
                     <li><a href="http://127.0.0.1:5500/projects.html">Projects</a></li>
                     <li><a href="http://127.0.0.1:5500/contact.html">Contact Me</a></li>
                 </ul>
+                <a href="http://127.0.0.1:5500/login.html" class="login-btn">Login</a>
             </div>
         </nav>
     </header>
