--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,7 @@
                     <li><a href="http://127.0.0.1:5500/projects.html">Projects</a></li>
                     <li><a href="http://127.0.0.1:5500/contact.html">Contact Me</a></li>
                 </ul>
+                <a href="http://127.0.0.1:5500/login.html" class="login-btn">Login</a>
             </div>
         </nav>
     </header>
