adding myspce elemetn poem,suvhichar,notes

--- a/my_space.html
+++ b/my_space.html
@@ -32,19 +32,19 @@
     <main>
 
         <!-- ------------------------- -->
-        <div class="firstsection">
-            <div class="poem">
-                <a href="#">कवितायें</a>
+        <div class="firstsection" >
+            <div class="poem" style="background-image: url(images/kavita.jpg);">
+                <a href="http://127.0.0.1:5500/poem.html">कवितायें</a>
             </div>
 
             <!-- ------------------------- -->
-            <div class="quotes">
+            <div class="quotes" style="background-image: url(images/suvichar.jpg); background-repeat: no-repeat; background-size: cover;">
                 <a href="#">सुविचार</a>
             </div>
 
 
             <!-- ------------------ -->
-            <div class="notes">
+            <div class="notes" style="background-image: url(images/notes.jpg); background-size: cover; background-repeat: no-repeat; "> 
                 <a href="#">नोट्स</a>
             </div>
 
